crates/formatter/tests/snapshots/snapshots__synapse__main__delta__40__pushers.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2023 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.
--
-- Originally licensed under the Apache License, Version 2.0:
-- <http://www.apache.org/licenses/LICENSE-2.0>.
--
-- [This file includes modifications made by New Vector Limited]
--
--
/* Copyright 2017 Vector Creations Ltd
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

create table if not exists pushers2 (
	id bigint primary key,
	user_name text not null,
	access_token bigint default null,
	profile_tag text not null,
	kind text not null,
	app_id text not null,
	app_display_name text not null,
	device_display_name text not null,
	pushkey text not null,
	ts bigint not null,
	lang text,
	data text,
	last_stream_ordering integer,
	last_success bigint,
	failing_since bigint,
	unique(app_id, pushkey, user_name)
);

insert into pushers2 select * from PUSHERS;

drop table PUSHERS;

alter table pushers2 rename to pushers;
